--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,42 @@
 <html>
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="design.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
 </head>
-<body>
-    <form method="POST" action="/loginprocess">
-        Username: <input type="text" name="txt_uname" placeholder="Enter username">
-        <br>
-        Password: <input type="password" name="txt_pword" placeholder="Enter password">
-        <br>
-        <input type="submit" name="login_submit" value="Login">
-    </form>
+<body class="mainfont">
+    <% var isLogged, ft %>
+    <% if (isLogged==0 && ft==0){ %>
+    <script>
+        toastr.error("Invalid Username and/or Password.");
+    </script>
+    <% } %>
+    <div class="row">
+        <div class="col s4"></div>
+        <div class="col s4 adjust-top blue darken-4 white-text">
+            <form method="POST" action="/loginprocess">
+                <div class="input-field">
+                <i class="material-icons prefix">account_circle</i>
+                <input id="icon_prefix" type="text" name="txt_uname" class="validate grey-text text-lighten-5">
+                <label for="icon_prefix">Username</label>
+                </div>
+                <div class="input-field">
+                <i class="material-icons prefix">vpn_key</i>
+                <input id="icon_pass" type="password" name="txt_pword" class="grey-text text-lighten-5 validate">
+                <label for="icon_pass">Password</label>
+                </div>
+                <input type="submit" name="login_submit" value="Login" class="btn-large white-text waves-light">
+
+            </form>
+        </div>
+        <div class="col s4"></div>
+    </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
