created view items

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@ Time Logged In:<%=tl%><br>
     <a href="#">View Logs</a><br>
 <% } %>
 <hr>
-<a href="#">View Items</a><br>
+<a href="/items">View Items</a><br>
 <a href="#">Add Item</a><br>
 <a href="#">Modify Item</a><br>
 <a href="#">Delete Item</a><br>
