--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@ Time Logged In:<%=tl%><br>
 <% } %>
 <hr>
 <a href="/items">View Items</a><br>
-<a href="#">Add Item</a><br>
+<a href="/items/additem">Add Item</a><br>
 <a href="#">Modify Item</a><br>
 <a href="#">Delete Item</a><br>
 </body>
