--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,42 +1,45 @@
 <html>
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="design.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="mainfont">
+<body class="mainfont endless-river">
     <% var isLogged, ft %>
     <% if (isLogged==0 && ft==0){ %>
-    <script>
-        toastr.error("Invalid Username and/or Password.");
-    </script>
+        <!--error handling here-->
     <% } %>
-    <div class="row">
-        <div class="col s4"></div>
-        <div class="col s4 adjust-top blue darken-4 white-text">
-            <form method="POST" action="/loginprocess">
-                <div class="input-field">
-                <i class="material-icons prefix">account_circle</i>
-                <input id="icon_prefix" type="text" name="txt_uname" class="validate grey-text text-lighten-5">
-                <label for="icon_prefix">Username</label>
-                </div>
-                <div class="input-field">
-                <i class="material-icons prefix">vpn_key</i>
-                <input id="icon_pass" type="password" name="txt_pword" class="grey-text text-lighten-5 validate">
-                <label for="icon_pass">Password</label>
-                </div>
-                <input type="submit" name="login_submit" value="Login" class="btn-large white-text waves-light">
+        <form method="POST" action="/loginprocess">
+            <div class="grid-container adjust-top">
+                <div class="grid-x grid-padding-x grid-padding-y">
+                    <div class="cell large-4 small-12"></div>
 
-            </form>
-        </div>
-        <div class="col s4"></div>
-    </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+                    <div class="cell large-2 small-12 clearwhite"><label for="uname" class="text-left middle">Enter username:</label></div>
+                    <div class="cell large-2 small-12 clearwhite">
+                        <input type="text" name="txt_uname" class="" id="uname">
+                    </div>
+                </div>
+                <div class="grid-x grid-padding-x">
+                    <div class="cell large-4 small-12"></div>
+
+                    <div class="cell large-2 small-12 clearwhite"><label for="pword" class="text-left middle">Enter username:</label></div>
+                    <div class="cell large-2 small-12 clearwhite">
+                        <input type="password" name="txt_pword" class="" id="pword">
+                    </div>
+                </div>
+                <div class="grid-x grid-padding-x grid-padding-y">
+                    <div class="cell large-7 small-12"></div>
+                    <div class="cell large-1 small-12">
+                        <input type="submit" name="login_submit" value="Login" class="">
+                    </div>
+                </div> 
+            </div>
+        </form>
 </body>
 </html>
