--- a/public/design.css
+++ b/public/design.css
@@ -9,6 +9,17 @@ background: linear-gradient(to right, #185a9d, #43cea2); /* W3C, IE 10+/ Edge, F
     background-color:white;
 
 }
+.white-text
+{
+    color:#fefefe;
+}
+.skyline
+{
+    background: #1488CC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
 .adjust-top
 {
     margin:100px auto;
